2006-08-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: slight style change
	* configure.in: enable the GMP plugin by default

2006-08-11  Bastien Nocera  <hadess@hadess.net>

	* src/backend/debug.h:
	* src/totem-mozilla-viewer.c: (on_about1_activate):
	* src/totem.c: (on_about1_activate), (main):
	* src/vanity.c: (on_about1_activate), (main):
	Patch from Christian Persch <chpe@cvs.gnome.org>
	to use VERSION again instead of PACKAGE_VERSION

2006-08-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	Fix double-include

2006-08-11  Christian Persch  <chpe@cvs.gnome.org>

	* browser-plugin/totemBasicPlugin.cpp:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp:

	Use nsMemory::Alloc, for gecko 1.7 compatibility.

2006-08-11  Christian Persch  <chpe@cvs.gnome.org>

	* autogen.sh:
	* configure.in:
	* Makefile.am:
	* src/Makefile.am:
	R src/totem-mozilla-plugin.cpp:
	R totem-mozilla-scriptable.cpp:
	R totem-mozilla-scriptable.h:
	A browser-plugin/.cvsignore:
	A browser-plugin/Makefile.am:
	A browser-plugin/TODO:
	A browser-plugin/idl/.cvsignore:
	A browser-plugin/idl/Makefile.am:
	A browser-plugin/idl/totemIBasicPlayer.idl:
	A browser-plugin/idl/totemIComplexPlayer.idl:
	A browser-plugin/idl/totemIGMPControls.idl:
	A browser-plugin/idl/totemIGMPPlayer.idl:
	A browser-plugin/idl/totemINarrowSpacePlayer.idl:
	A browser-plugin/plugin.symbols:
	A browser-plugin/totemBasicPlugin.cpp:
	A browser-plugin/totemBasicPlugin.h:
	A browser-plugin/totemComplexPlugin.cpp:
	A browser-plugin/totemComplexPlugin.h:
	A browser-plugin/totemGMPPlugin.cpp:
	A browser-plugin/totemGMPPlugin.h:
	A browser-plugin/totemNarrowSpacePlugin.cpp:
	A browser-plugin/totemNarrowSpacePlugin.h:
	A browser-plugin/totemPlugin.cpp:
	A browser-plugin/totemPlugin.h:
	A browser-plugin/totemScriptableBase.cpp:
	A browser-plugin/totemScriptableBase.h:
