@@ -40,7 +40,7 @@ static const nsCID kClassID =
   { 0x97, 0x64, 0xf5, 0xab, 0x50, 0xa4, 0x0c, 0x06 } };
 
 static const char kClassDescription[] = "totemNarrowSpacePlugin";
-static const char kPluginDescription[] = "XXX";
+static const char kPluginDescription[] = "QuickTime Plug-in 7.0 (compatible; Totem)";
 
 static const totemPluginMimeEntry kMimeTypes[] = {
 	{ "video/quicktime", "mov", NULL },
