@@ -1,5 +1,13 @@
 2006-08-11  Bastien Nocera  <hadess@hadess.net>
 
+	* browser-plugin/totemComplexPlugin.cpp:
+	* browser-plugin/totemGMPPlugin.cpp:
+	* browser-plugin/totemNarrowSpacePlugin.cpp:
+	Give the plugins names compatible with what they're
+	supposed to emulate
+
+2006-08-11  Bastien Nocera  <hadess@hadess.net>
+
 	* browser-plugin/totemPlugin.cpp: slight style change
 	* configure.in: enable the GMP plugin by default
 
